syntax = "proto3";

package calc;

option go_package = "calcpb";

message Numbers {
    repeated int32 numbers = 1;
}

message SumRequest {
    Numbers numbers = 1;
}

message SumResponse {
    string result = 2;
}

message PrimeNumberDecompositionRequest {
    int32 number = 1;
}

message PrimeNumberDecompositionResponse {
    int32 number = 1;
}

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    float number = 1;
}

message FindMaximumRequest {
    int32 number = 1;
}

message FindMaximumResponse {
    int32 number = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    float number_root = 1;
}

service SumService {
    rpc Sum(SumRequest) returns (SumResponse) {};

    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};

    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};

    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};

    // This rpc will throw exception if number is negative; error -- INVALID_ARGUMENT
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}